# mime type for the profile
shellmimedir   = $(kde_mimedir)/bluetooth
shellmime_DATA = serial-port-profile.desktop \
    handsfree-profile.desktop \
    obex-ftp-profile.desktop \
    unknown-device-class.desktop \
    av-device-class.desktop \
    computer-device-class.desktop \
    imaging-device-class.desktop \
    lan-device-class.desktop \
    misc-device-class.desktop \
    peripheral-device-class.desktop \
    phone-device-class.desktop \
    obexobjectpush-profile.desktop \
    unknown-profile.desktop \
    fax-profile.desktop \
    dun-profile.desktop \
    synchronization-profile.desktop \
    headset-profile.desktop \
    mouse-device-class.desktop \
    keyboard-device-class.desktop

