# service files
shellservicedir   = $(kde_servicesdir)
shellservice_DATA = sdpmime-serial-port-profile.desktop \
    sdpmime-handsfree-profile.desktop\
    sdpmime-obex-ftp-profile.desktop\
    sdpmime-obex-client-profile.desktop\
    sdpmime-dun-profile.desktop\
    sdpmime-fax-profile.desktop\
    sdpmime-headset-profile.desktop\
    sdpmime-synchronization-profile.desktop

